# Class-Manager

./: .gitignore  .pre-commit-config.yaml  .pylintrc  1.md  CONTRIBUTING.md  README.md  [Test]编译.bat  bash.exe.stackdump  compile.bat  main.py  main1.py  pyproject.toml  requirements.txt  test.py  version
.github/workflows/: build.yml  release.yml
RinUI/config/: rin_ui.json
config/: __init__.py  constants.py  settings.json  settings.py
core/: __init__.py  database.py
core/container/: __init__.py  decorators.py  exceptions.py  service_container.py
core/decorators/: __init__.py  error_handling.py  logging.py  performance.py  validation.py
core/events/: __init__.py  event_bus.py  event_handlers.py  event_types.py
core/exceptions/: __init__.py  custom_exceptions.py  exception_handler.py
core/models/: __init__.py  achievement.py  base.py  class_.py  master.py  score_record.py  score_template.py  student.py  tag.py
core/repositories/: __init__.py  achievement_repository.py  base_repository.py  class_repository.py  student_repository.py
core/services/: __init__.py  achievement_service.py  class_service.py  student_service.py
data/: class_63f99f21-8a2b-4fa1-b040-f87cd9ab7bff.db  class_manager.db  master.db
data/examples/: sample_data.json
img/main/default/: background.jpg.old
qml/: AchievementsPage.qml  ClassesPage.qml  DashboardPage.qml  NavigationButton.qml  SettingsPage.qml  StatCard.qml  StudentsPage.qml  main.qml
scripts/: init_db.py  migrate_db.py
src/: base.py  core.py  login.py
ui/: 0-designer.bat  0-retranslate.bat  AttendanceInfoView.ui  Bomber.ui  CleaingScoreSumUp.ui  DebugWindow.ui  GroupWindow.ui  ListBoxView.ui  MainClassWindow.ui  MultiSelectWindow.ui  NewTemplateWindow.ui  NoiseDetector.ui  NoticeViewer.ui  SelectTemplateWindow.ui  StudentView.ui  WTF.ui
ui/language/: en_US.ts  zh_CN.ts
ui/py/: About.py  AttendanceInfoView.py  GroupWindow.py  ListBoxView.py  MainClassWindow.py  ModifyHistoryWindow.py
ui/qml/: 1.html  AchievementsPage.qml  BackupRestorePage.qml  ClassManagementPage.qml  ClassesPage.qml  DashboardPage.qml  DataAnalysisPage.qml  HelpSupportPage.qml  ImportExportPage.qml  NavigationButton.qml  ScoreManagementPage.qml  SettingsPage.qml  StatCard.qml  StudentManagementPage.qml  StudentsPage.qml  main.qml
ui/qml/components/: ContentSection.qml  FluentPage.qml  QuickActionCard.qml
ui/resources/: resources.qrc
utils/: __init__.py  base.py  basetypes.py  classdatatypes.py  classdtypes.py  classobjects.py  consts.py  data_ops.py  dataloader.py  example.py  file_ops.py  functions.py  high_precision_operation.py  loader.py  logger.py  prompts.py  settings.py  style.py  system.py  time_ops.py  update_check.py  validators.py  widgets.py
utils/algorithm/: __init__.py  datatypes.py  high_precision.py  keyorder.py  numeric.py
utils/bak/: default.py  login.py
utils/classobjects_Test/: __init__.py
utils/classobjects_Test/dataobj/: classobj_stub.py  score_modification.py  student.py
utils/data/: hints.txt
utils/events/: event.py  event_types.py
utils/functions/: __init__.py  decorators.py  excinfo.py  numbers.py  prompts.py  qtutils.py  sounds.py
utils/websocket/: client.py  client_2.py  connection.py  server.py  server_2.py
utils/websocket/demo/: 114.txt  socket_client.py  socket_main.py  socket_server.py  socket_server_1.py
widgets/: __init__.py
widgets/basic/: MyMainWindow.py  MyWidget.py  Qt.py  __init__.py  widgets.py
widgets/custom/: AboutWidget.py  AchievementWidget.py  AttendanceInfoViewWidget.py  AttendanceInfoWidget.py  CleaningScoreSumUpWidget.py  DebugWidget.py  EditTemplateWidget.py  GroupWidget.py  HistoryWidget.py  HomeworkScoreSumUpWidget.py  ListView.py  LoadingScreen.py  NewTemplateWidget.py  NoiseDetectorWidget.py  RandomSelectorWidget.py  SelectTemplateWidget.py  SettingWidget.py  StudentSelectorWidget.py  StudentWidget.py  WTFWidget.py
widgets/ui/: 0-designer.bat  About.ui  AchievementWindow.ui  AttendanceInfoEdit.ui  EditTemplateWindow.ui  HomeworkScoreSumUp.ui  LoadingScreen.ui  LogWindow.ui  MainClassWindow.ui  ModifyHistoryWindow.ui  RandomSelector.ui  SettingWindow.ui  StudentWindow.ui
widgets/ui/py/: Bomber.py  EditTemplateWindow.py  HomeworkScoreSumUp.py  LoadingScreen.py  LogWindow.py  MainClassWindow.py  MultiSelectWindow.py  NoticeViewer.py
widgets/ui/pyside6/: AchievementWindow.py  AttendanceInfoEdit.py  CleaingScoreSumUp.py  DebugWindow.py  NewTemplateWindow.py  NoiseDetector.py  RandomSelector.py  SelectTemplateWindow.py  SettingWindow.py  StudentView.py  StudentWindow.py  WTF.py
